# eosin

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.base  LICENSE-APACHE  README.md  build.sh  buildkitd.toml  docker-bake.hcl  download.yaml  migrate.yaml  pvc.yaml  sync.yaml  up.sh
browser/: .gitignore  Dockerfile  README.md  package-lock.json  package.json  playwright.config.ts
browser/e2e/: global-setup.mjs
browser/e2e/tests/: auth.spec.ts  header-help-settings.spec.ts  major-features.spec.ts  shell.spec.ts  sidebar-datasets.spec.ts  viewer.spec.ts
browser/src/: app.html  hooks.server.ts
browser/src/lib/api/: annotations.ts
browser/src/lib/auth/: client.ts  server.ts
browser/src/lib/components/: ActivityIndicator.svelte  AnnotationContextMenu.svelte  AnnotationsPanel.svelte  AppHeader.svelte  ContextMenu.svelte  ExportModal.svelte  LoginModal.svelte  Minimap.svelte  Sidebar.svelte  SplitPaneContainer.svelte  TabBar.svelte  TabContextMenu.svelte  ViewerPane.svelte  ViewportContextMenu.svelte
browser/src/lib/components/settings/: SettingsModal.svelte
browser/src/lib/components/viewer/: AnnotationOverlay.svelte  MeasurementOverlay.svelte  RoiOverlay.svelte  ScaleBar.svelte  ViewerHud.svelte  ViewerHudMoreMenu.svelte
browser/src/lib/frusta/: TileRenderer.svelte  cache.ts  client.ts  gpuTileWorker.ts  index.ts  processingPool.ts  processingWorker.ts  protocol.ts  retryManager.ts  stainEnhancement.ts  stainNormalization.ts  viewport.ts
browser/src/lib/server/: metrics.ts
browser/src/lib/stores/: annotations.ts  auth.ts  export.ts  metrics.ts  navigation.ts  newSlides.ts  progress.ts  settings.ts  slideCache.ts  tabs.ts  toast.ts  tools.ts  urlSync.ts
browser/src/lib/theme/: colors.ts
browser/src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte  layout.css
browser/src/routes/api/auth/login/: +server.ts
browser/src/routes/api/auth/refresh/: +server.ts
browser/src/routes/api/slides/: +server.ts
browser/static/: manifest.json  sw.js
chart/: Chart.yaml  values.yaml
chart/templates/: _keycloak-env.yaml  _metrics-env.yaml  _nats-env.yaml  _postgres-env.yaml  _redis-env.yaml  browser.yaml  compiler.yaml  frusta.yaml  iam.yaml  landing.yaml  meta.yaml  storage-operator.yaml  storage.yaml
common/: Cargo.toml
common/src/: args.rs  cli.rs  cors.rs  lib.rs  metrics.rs  postgres.rs  rbac.rs  redis.rs  request_context.rs  shutdown.rs  streams.rs  types.rs  wait.rs  wait_registry.rs
common/src/rate_limit/: middleware.rs  mod.rs  rate_limit.lua
compiler/: Cargo.toml  Dockerfile  README.md
compiler/src/: args.rs  db.rs  dispatch.rs  main.rs  meta_client.rs  process.rs  s3.rs  tiler.rs
cptac/: download_cptac.py
crds/: storage.eosin.io_cluster_crd.yaml
downloaders/cptac/: Dockerfile  download_cptac_pathdb.py  requirements.txt
downloaders/tcga-brca/: Dockerfile
frusta/: Cargo.toml  Dockerfile
frusta/src/: args.rs  client.rs  main.rs  metrics.rs  priority_queue.rs  protocol.rs  server.rs  viewport.rs  worker.rs
iam/: Cargo.toml  Dockerfile
iam-client/: Cargo.toml
iam-client/src/: lib.rs
iam/src/: app.rs  args.rs  main.rs
iam/src/server/: internal.rs  public.rs
intake/: Cargo.toml  README.md
intake/src/: args.rs  main.rs
landing/: .gitignore  Dockerfile  README.md  hero.sh  package-lock.json  package.json
landing/src/: hooks.server.ts
landing/src/routes/: +page.svelte
meta/: Cargo.toml  Dockerfile  README.md
meta/src/: annotation_db.rs  annotation_handlers.rs  annotation_models.rs  args.rs  bitmask.rs  cli.rs  client.rs  db.rs  handlers.rs  main.rs  metrics.rs  models.rs  server.rs
meta/src/server/: internal.rs  mod.rs  public.rs
renderer/: Cargo.toml  README.md
scripts/: dispatch-camelyon17.yaml  dispatch-cptac.yaml  dispatch-tcga-brca.yaml  dispatch.yaml  download-cptac.yaml  download-tcga-brca.yaml  eosin_values.yaml  gif.sh  histion_values.yaml  migrate.yaml  psql.sh  upgrade_histion.sh
secrets_example/: keycloak-cred.yaml  nats-cred.yaml  postgres-cred.yaml  redis-cred.yaml  spaces-cred.yaml
storage/: Cargo.toml  Dockerfile  README.md  build.rs
storage-operator/: Cargo.toml  Dockerfile  build.rs
storage-operator/src/: main.rs  metrics.rs
storage-operator/src/clusters/: actions.rs  mod.rs  planner.rs  reconcile.rs
storage-operator/src/shards/: actions.rs  mod.rs  reconcile.rs
storage-operator/src/util/: colors.rs  error.rs  finalizer.rs  merge.rs  metrics.rs  mod.rs  patch.rs
storage/proto/: cluster.proto
storage/src/: api.rs  args.rs  client.rs  cluster.rs  health.rs  lib.rs  main.rs  metrics.rs  replication.rs  server.rs  shard.rs
super/: .gitignore  grid_search_results.csv  hparam_search.py  requirements.txt  run_hparams.sh  slides.csv  storage.proto  storage_pb2.py  storage_pb2_grpc.py  tensorboard.sh  train.sh  train_sr.py  vae.py
tcga-brca/: download.py
toy/: README.md  requirements.txt  run.sh  slide_viewer.py
types/: Cargo.toml
types/src/: lib.rs
