[workspace]
members = ["intake", "meta", "renderer", "storage"]
resolver = "3"

[workspace.dependencies]
tokio = { version = "1.49.0", features = ["full"] }
anyhow = "1.0.100"
bytes = "1.11.0"
clap = { version = "4.5.56", features = ["derive", "env"] }
async-nats = "0.46.0"
rustls = { version = "0.23", default-features = false, features = [
    "std",
    "aws-lc-rs",
] }
rustls-native-certs = "0.8"
tokio-rustls = { version = "0.26" }
tonic = { version = "0.14.3" }

# Used by EDA services and storage
# apt-get install -y --no-install-recommends libopenslide-dev
openslide-rs = "2.4.0"
axum = { version = "0.8.8", features = [
    "query",
    "json",
    "macros",
    "tokio",
] }