[workspace]
members = ["common", "compiler", "frusta", "intake", "meta", "storage", "iam", "types"]
exclude = ["iam-client"]
resolver = "3"

[workspace.dependencies]
tokio = { version = "1.49.0", features = ["full"] }
anyhow = "1.0.100"
bytes = "1.11.0"
clap = { version = "4.5.56", features = ["derive", "env"] }
async-nats = "0.46.0"
rustls = { version = "0.23", default-features = false, features = [
    "std",
    "aws-lc-rs",
] }
rustls-native-certs = "0.8"
tokio-rustls = { version = "0.26" }
tonic = { version = "0.14.3" }

# Used by EDA services and storage
# apt-get install -y --no-install-recommends libopenslide-dev
openslide-rs = "2.4.0"
axum = { version = "0.8.8", features = [
    "query",
    "json",
    "macros",
    "tokio",
] }
base64 = "0.22.1"
async-trait = "0.1.89"
keycloak = "26.3.202"
axum-keycloak-auth = "0.8.3"
base64-url = "3.0.0"
chrono = "0.4.42"
http = "1.4.0"
futures = "0.3.31"
deadpool-redis = { version = "0.22.0", features = ["rt_tokio_1"] }
redis = { version = "0.32.7", default-features = false, features = [
    "acl",
    "script",
    "connection-manager",
    "tokio-comp",
    "tls-rustls",
    "tokio-rustls-comp",
    "tls-rustls-webpki-roots",
    "json",
] }
deadpool-postgres = { version = "0.14.1", features = ["serde"] }
futures-util = "0.3.31"
http-body-util = "0.1.3"
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.2"
owo-colors = { version = "4.2.3", features = ["supports-colors"] }
percent-encoding = "2.3.2"
postgres = { version = "0.19.11", features = [
    "with-chrono-0_4",
    "with-serde_json-1",
    "with-uuid-1",
] }
postgres-types = { version = "0.2.10", features = ["derive"] }
rand = "0.9.2"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
    "http2",
    "stream",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
tokio-postgres-rustls = "0.13"
tokio-postgres = { version = "0.7.14", features = [
    "with-chrono-0_4",
    "with-serde_json-1",
    "with-uuid-1",
] }
tokio-stream = "0.1.17"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
uuid = { version = "1.18.1", features = ["serde", "v4", "v5", "v8"] }
async-redis-lock = "0.2.3"
tokio-util = "0.7.18"