[workspace]
members = [
    "common",
    "compiler",
    "frusta",
    "intake",
    "meta",
    "storage",
    "iam",
    "storage-operator",
]
exclude = ["iam-client", "types"]
resolver = "3"

[workspace.dependencies]
tokio = { version = "1.51.1", features = ["full"] }
anyhow = "1.0.102"
bytes = "1.11.1"
clap = { version = "4.6.0", features = ["derive", "env"] }
async-nats = "0.47.0"
rustls = { version = "0.23", default-features = false, features = [
    "std",
    "aws-lc-rs",
] }
rustls-native-certs = "0.8"
tokio-rustls = { version = "0.26" }
tonic = { version = "0.14.5" }

# Used by EDA services and storage
# apt-get install -y --no-install-recommends libopenslide-dev
openslide-rs = "2.4.0"
axum = { version = "0.8.8", features = ["query", "json", "macros", "tokio"] }
base64 = "0.22.1"
async-trait = "0.1.89"
keycloak = "26.6.1"
axum-keycloak-auth = "0.8.3"
base64-url = "3.0.3"
chrono = "0.4.44"
http = "1.4.0"
futures = "0.3.32"
deadpool-redis = { version = "0.23.0", features = ["rt_tokio_1"] }
redis = { version = "1.2.0", default-features = false, features = [
    "acl",
    "script",
    "connection-manager",
    "tokio-comp",
    "tls-rustls",
    "tokio-rustls-comp",
    "tls-rustls-webpki-roots",
    "json",
] }
deadpool-postgres = { version = "0.14.1", features = ["serde"] }
futures-util = "0.3.32"
http-body-util = "0.1.3"
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"
owo-colors = { version = "4.3.0", features = ["supports-colors"] }
percent-encoding = "2.3.2"
postgres = { version = "0.19.13", features = [
    "with-chrono-0_4",
    "with-serde_json-1",
    "with-uuid-1",
] }
postgres-types = { version = "0.2.13", features = ["derive"] }
rand = "0.10.1"
reqwest = { version = "0.13", default-features = false, features = [
    "rustls",
    "json",
    "http2",
    "stream",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.27.0"
tokio-postgres-rustls = "0.13"
tokio-postgres = { version = "0.7.17", features = [
    "with-chrono-0_4",
    "with-serde_json-1",
    "with-uuid-1",
] }
tokio-stream = "0.1.18"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors"] }
uuid = { version = "1.23.0", features = ["serde", "v4", "v5", "v8"] }
async-redis-lock = "0.2.3"
tokio-util = "0.7.18"
