[package]
name = "eosin-compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
eosin-common = { path = "../common" }
eosin-storage = { path = "../storage" }
async-nats = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
# S3 client for listing and downloading TIF files
aws-config = { version = "1.8", features = ["rt-tokio", "rustls"] }
aws-sdk-s3 = { version = "1.106", features = ["rustls"] }
aws-credential-types = "1.2.11"
aws-types = "1.3.9"
aws-smithy-types = "1.3.3"
aws-smithy-http = "0.62.4"
aws-smithy-runtime-api = "1.9.1"
# Postgres for dispatch tracking
tokio-postgres-rustls = "0.13"
tokio-postgres = { version = "0.7.14", features = [
    "with-chrono-0_4",
    "with-serde_json-1",
    "with-uuid-1",
] }
postgres = { version = "0.19.11", features = [
    "with-chrono-0_4",
    "with-serde_json-1",
    "with-uuid-1",
] }
deadpool-postgres = { version = "0.14.1", features = ["serde"] }
postgres-types = { version = "0.2.10", features = ["derive"] }
clap = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
async-channel = "2.3"
# Image processing
openslide-rs = { workspace = true }
image = "0.25"
webp = "0.3"
rayon = "1.10"
async-redis-lock = { workspace = true }
