[package]
name = "histion-frusta"
version = "0.1.0"
edition = "2024"

[dependencies]
histion-common = { path = "../common" }
histion-storage = { path = "../storage" }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true, features = ["ws"] }
tower-http = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }