[package]
name = "histion-frusta"
version = "0.1.0"
edition = "2021"

[dependencies]
histion-common = { path = "../common" }
histion-storage = { path = "../storage" }
clap = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
tokio-util = { workspace = true }
axum = { workspace = true, features = ["ws"] }
tower-http = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3"
rustc-hash = "2.1.1"
futures-util = { workspace = true }
async-channel = "2.5.0"
async-nats = { workspace = true }