[package]
name = "eosin-frusta"
version = "0.1.0"
edition = "2021"

[dependencies]
eosin-common = { path = "../common" }
eosin-storage = { path = "../storage" }
clap = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
tokio-util = { workspace = true }
axum = { workspace = true, features = ["ws"] }
tower-http = { workspace = true }
deadpool-redis = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3"
rustc-hash = "2.1.1"
futures-util = { workspace = true }
async-channel = "2.5.0"
async-nats = { workspace = true }
serde_json = { workspace = true }
parking_lot = "0.12"
metrics = { workspace = true }