[package]
name = "histion-intake"
version = "0.1.0"
edition = "2024"

[dependencies]
# For storing raw WSI data in S3 that will be garbage collected
# after it is inserted into the storage backend
aws-config = { version = "1.8", features = ["rt-tokio", "rustls"] }
aws-sdk-s3 = { version = "1.106", features = ["rustls"] }
aws-credential-types = "1.2.11"
aws-types = "1.3.9"
aws-smithy-types = "1.3.3"
aws-smithy-http = "0.62.4"
aws-smithy-runtime-api = "1.9.1"