[package]
name = "eosin-intake"
version = "0.1.0"
edition = "2024"

[dependencies]
eosin-common = { path = "../common" }
async-nats = { workspace = true }
serde_json = { workspace = true }
# For storing raw WSI data in S3 that will be garbage collected
# after it is inserted into the storage backend
aws-config = { version = "1.8", features = ["rt-tokio", "rustls"] }
aws-sdk-s3 = { version = "1.129", features = ["rustls"] }
aws-credential-types = "1.2.14"
aws-types = "1.3.14"
aws-smithy-types = "1.4.7"
aws-smithy-http = "0.63.6"
aws-smithy-runtime-api = "1.11.6"
clap = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
