[package]
name = "histion-meta"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio-postgres-rustls = "0.13"
tokio-postgres = { version = "0.7.14", features = [
    "with-chrono-0_4",
    "with-serde_json-1",
    "with-uuid-1",
] }
postgres = { version = "0.19.11", features = [
    "with-chrono-0_4",
    "with-serde_json-1",
    "with-uuid-1",
] }
deadpool-postgres = { version = "0.14.1", features = ["serde"] }
postgres-types = { version = "0.2.10", features = ["derive"] }
axum = { workspace = true }
