[package]
name = "eosin-meta"
version = "0.1.0"
edition = "2024"

[dependencies]
eosin-common = { path = "../common" }
tokio = { workspace = true }
tokio-postgres-rustls = "0.13"
tokio-postgres = { version = "0.7.14", features = [
    "with-chrono-0_4",
    "with-serde_json-1",
    "with-uuid-1",
] }
postgres = { version = "0.19.11", features = [
    "with-chrono-0_4",
    "with-serde_json-1",
    "with-uuid-1",
] }
deadpool-postgres = { version = "0.14.1", features = ["serde"] }
postgres-types = { version = "0.2.10", features = ["derive"] }
axum = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
keycloak = { workspace = true }
axum-keycloak-auth = { workspace = true }