[package]
name = "eosin-storage-operator"
version = "0.1.0"
edition = "2024"

[dependencies]
eosin-common = { path = "../common" }
eosin-types = { path = "../types" }
serde = { workspace = true }
serde_json = { workspace = true }
kube = { version = "3.0.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.27.0", features = ["latest", "schemars"] }
schemars = { version = "1" }
clap = { workspace = true }
owo-colors = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
prometheus = { version = "0.13", optional = true }
hyper = { version = "^0.14", features = ["server", "http1", "tcp"] }
lazy_static = "^1.4"
const_format = "0.2.30"
uuid = { version = "1.3.0", features = ["v4"] }
parse_duration = "2.1.1"
kube-leader-election = "0.43.0"
tokio-util = { workspace = true }
hex = "0.4.3"
sha2 = "0.10.9"
json-patch = "4.1.0"
thiserror = "2.0.18"

[build-dependencies]
serde_yaml = "0.9"
eosin-types = { path = "../types" }
kube = { version = "3.0.1", default-features = true, features = ["derive"] }

[features]
default = ["metrics"]        # Enable metrics by default
metrics = ["dep:prometheus"] # metrics feature requires prometheus crate
