[package]
name = "eosin-storage-operator"
version = "0.1.0"
edition = "2024"

[dependencies]
eosin-common = { path = "../common" }
eosin-types = { path = "../types" }
serde = { workspace = true }
serde_json = { workspace = true }
kube = { version = "3.1.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.27.1", features = ["latest", "schemars"] }
schemars = { version = "1" }
clap = { workspace = true }
owo-colors = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
prometheus = { version = "0.14", optional = true }
hyper = { version = "^1.9", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1"] }
http-body-util = { workspace = true }
lazy_static = "^1.5"
const_format = "0.2.35"
uuid = { version = "1.23.0", features = ["v4"] }
parse_duration = "2.1.1"
kube-leader-election = "0.43.0"
tokio-util = { workspace = true }
hex = "0.4.3"
sha2 = "0.11.0"
json-patch = "4.1.0"
thiserror = "2.0.18"
tonic = { workspace = true }
tonic-prost = "0.14"
prost = "0.14"
async-trait = { workspace = true }

[build-dependencies]
serde_yaml = "0.9"
eosin-types = { path = "../types" }
kube = { version = "3.1.0", default-features = true, features = ["derive"] }
tonic-prost-build = "0.14"
protobuf-src = "2"

[features]
default = ["metrics"]        # Enable metrics by default
metrics = ["dep:prometheus"] # metrics feature requires prometheus crate
