[package]
name = "eosin-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
eosin-common = { path = "../common" }
async-nats = { workspace = true }
serde_json = { workspace = true }
# For loading from cold storage
aws-config = { version = "1.8", features = ["rt-tokio", "rustls"] }
aws-sdk-s3 = { version = "1.106", features = ["rustls"] }
aws-credential-types = "1.2.11"
aws-types = "1.3.9"
aws-smithy-types = "1.3.3"
aws-smithy-http = "0.62.4"
aws-smithy-runtime-api = "1.9.1"
clap = { workspace = true }
axum = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
tonic-prost = "0.14"
prost = "0.14"
tokio-stream = "0.1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { workspace = true }
metrics = { workspace = true }

[build-dependencies]
tonic-prost-build = "0.14"
protobuf-src = "2"